; ModuleID = '/home/carl/AnghaBench/freebsd/stand/efi/loader/extr_main.c_set_currdev_devsw.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/efi/loader/extr_main.c_set_currdev_devsw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devsw = type { i32 }
%struct.devdesc = type { i32, %struct.devsw* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.devsw*, i32)* @set_currdev_devsw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_currdev_devsw(%struct.devsw* %0, i32 %1) #0 {
  %3 = alloca %struct.devsw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.devdesc, align 8
  store %struct.devsw* %0, %struct.devsw** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.devsw*, %struct.devsw** %3, align 8
  %7 = getelementptr inbounds %struct.devdesc, %struct.devdesc* %5, i32 0, i32 1
  store %struct.devsw* %6, %struct.devsw** %7, align 8
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.devdesc, %struct.devdesc* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = call i32 @set_currdev_devdesc(%struct.devdesc* %5)
  ret void
}

declare dso_local i32 @set_currdev_devdesc(%struct.devdesc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
